k8s/monolith/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jasca
  namespace: jasca
spec:
  type: ClusterIP
  selector:
    app: jasca
  ports:
    - name: web
      port: 3000
      targetPort: web
    - name: api
      port: 3001
      targetPort: api
