k8s/monolith/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jasca
  namespace: jasca
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "2g"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: jasca.koreacb.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jasca
                port:
                  number: 3000
  tls:
    - hosts:
        - jasca.koreacb.com
      secretName: jasca-tls
